# macos-network-scripts

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: allowed-commands.example.txt  denied-commands.example.txt  devices.example.toml  infrastructure.example.toml  known-hosts.example.toml
deploy/netbox/: .env.example  README.md  docker-compose.yml
docs/: command-safety.md  installation.md  mcp-and-claude-code.md  reports.md  safety-and-legal.md  tools.md  usage.md  workflows.md
examples/: sample-prompt-analyze-report.md  sample-prompt-ethernet-vs-wifi.md
requirements/: brew.txt  python-optional.txt  python.txt
scripts/diagnostics/: cert_check.sh  dev.sh  napalm.sh  snmp.sh  starlink.sh  unifi.sh  wifi.sh
scripts/discovery/: cameras.sh  devinfo.sh  dhcp.sh  dns.sh  fingerprint.sh  fleet.sh  hosts.sh  interfaces.sh  lldp.sh  mdns.sh  ndp.sh  netbios.sh  omada.sh  recon.sh  routes.sh  ssdp.sh  starlink_clients.sh  ubnt.sh  vendorscan.sh  wsd.sh
scripts/inventory/: system.sh
scripts/quality/: ping.sh  speedtest.sh  throughput.sh
scripts/reports/: devices.sh  diff.sh  generate.sh  history.sh  netbox.sh
scripts/topology/: map.sh
scripts/utils/: common.sh  device_models.py  devices.py  dhcp_parse.py  drawio_export.py  fdb_topology.py  format.py  html_report.py  infrastructure.py  inventory_db.py  known_hosts.py  lldp_parse.py  netbox_export.py  oui.py  oui_fetch.sh  recog.py  recog_fetch.sh  recon_editor.py  recon_map.py  redact.py  starlink_parse.py  wifi_parser.py
tests/: conftest.py
(+30 files in other folders)
